New grasp environments

--- a/view_envs.ipynb
+++ b/view_envs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,36 +34,48 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 47 matching environments.\n",
+      "Widow250GraspLocconic_cup-v0\n",
+      "Widow250GraspLocfountain_vase-v0\n",
+      "Widow250GraspLoccircular_table-v0\n",
+      "Widow250GraspLochex_deep_bowl-v0\n",
+      "Widow250GraspLocsmushed_dumbbell-v0\n",
+      "Widow250GraspLocsquare_prism_bin-v0\n",
+      "Widow250GraspLocnarrow_tray-v0\n",
+      "Widow250GraspLoccolunnade_top-v0\n",
+      "Widow250GraspLocstalagcite_chunk-v0\n"
+     ]
+    }
+   ],
    "source": [
-    "render_envs('Widow250GraspEasyRandomTrain')"
+    "render_envs('Widow250GraspLoc*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1 matching environments.\n",
-      "Widow250GraspEasyRandomTest-v0\n"
+      "Found 5 matching environments.\n",
+      "Widow250GraspEasy_circular_table-v0\n",
+      "Widow250GraspLoc_circular_table-v0\n",
+      "Widow250GraspBig_circular_table-v0\n",
+      "Widow250GraspOrient_circular_table-v0\n",
+      "Widow250GraspHard_circular_table-v0\n"
      ]
     }
    ],
    "source": [
-    "render_envs('Widow250GraspEasyRandomTest')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "render_envs('Widow250GraspEasy*')"
+    "render_envs('.*Grasp.*table')"
    ]
   }
  ],
@@ -86,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4
  },
