Add collection scripts

--- a/convert_datasets.ipynb
+++ b/convert_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grasp_easy_trajs_dir = '/media/3tb/chet/robo_exp/grasp_easy_trajs/'"
+    "grasp_easy_trajs_dir = '/media/3tb/chet/robo_exp/grasp_easy_trajs/'\n",
+    "grasp_big_trajs_dir = '/media/3tb/chet/robo_exp/grasp_big_trajs/'\n",
+    "grasp_loc_trajs_dir = '/media/3tb/chet/robo_exp/grasp_loc_trajs/'\n",
+    "grasp_orient_trajs_dir = '/media/3tb/chet/robo_exp/grasp_orient_trajs/'\n",
+    "grasp_hard_trajs_dir = '/media/3tb/chet/robo_exp/grasp_hard_trajs/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +38,8 @@
     "    num_datasets = len(dataset_files)\n",
     "    merged_dataset = np.load(dataset_files[0], allow_pickle='True')\n",
     "    for i, ds_file in enumerate(dataset_files):\n",
-    "        merged_dataset[i::num_datasets] = np.load(ds_file, allow_pickle='True')[i::num_datasets]\n",
+    "        num_trajs = len(merged_dataset[i::num_datasets])\n",
+    "        merged_dataset[i::num_datasets] = np.load(ds_file, allow_pickle='True')[:num_trajs]\n",
     "    np.save(dest_path, merged_dataset)"
    ]
   },
@@ -46,6 +51,36 @@
    "source": [
     "merged_dataset_path = f'{grasp_easy_trajs_dir}Widow250GraspEasyRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
     "merge_trajectory_datasets(f'{grasp_easy_trajs_dir}*.npy', merged_dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_dataset_path = f'{grasp_loc_trajs_dir}Widow250GraspLocRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
+    "merge_trajectory_datasets(f'{grasp_loc_trajs_dir}*.npy', merged_dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_dataset_path = f'{grasp_big_trajs_dir}Widow250GraspBigRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
+    "merge_trajectory_datasets(f'{grasp_big_trajs_dir}*.npy', merged_dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_dataset_path = f'{grasp_hard_trajs_dir}Widow250GraspBigRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
+    "merge_trajectory_datasets(f'{grasp_hard_trajs_dir}*.npy', merged_dataset_path)"
    ]
   },
   {
