Modify big environment setup, try to fix script issues

--- a/convert_datasets.ipynb
+++ b/convert_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_trajectory_datasets(file_pattern, dest_path):\n",
+    "def merge_trajectory_datasets(file_pattern, dest_path, merged_size=5000):\n",
     "    dataset_files = [f for f in glob.glob(file_pattern) if f.endswith('.npy')]\n",
     "    num_datasets = len(dataset_files)\n",
-    "    merged_dataset = np.load(dataset_files[0], allow_pickle='True')\n",
+    "    merged_dataset = np.empty(merged_size, dtype='O')\n",
     "    for i, ds_file in enumerate(dataset_files):\n",
-    "        num_trajs = len(merged_dataset[i::num_datasets])\n",
+    "        num_trajs = (merged_size - i - 1)//num_datasets + 1\n",
     "        merged_dataset[i::num_datasets] = np.load(ds_file, allow_pickle='True')[:num_trajs]\n",
     "    np.save(dest_path, merged_dataset)"
    ]
@@ -55,12 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_dataset_path = f'{grasp_loc_trajs_dir}Widow250GraspLocRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
     "merge_trajectory_datasets(f'{grasp_loc_trajs_dir}*.npy', merged_dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_dataset_path = f'{grasp_orient_trajs_dir}Widow250GraspOrientRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
+    "merge_trajectory_datasets(f'{grasp_orient_trajs_dir}*.npy', merged_dataset_path)"
    ]
   },
   {
@@ -75,21 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_dataset_path = f'{grasp_hard_trajs_dir}Widow250GraspBigRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
+    "merged_dataset_path = f'{grasp_hard_trajs_dir}Widow250GraspHardRandomTrain-v0_5K_noise_0.1_5000.npy'\n",
     "merge_trajectory_datasets(f'{grasp_hard_trajs_dir}*.npy', merged_dataset_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_dataset = np.load(merged_dataset_path ,allow_pickle=True)"
    ]
   },
   {
