Modify scripted policy

--- a/view_envs.ipynb
+++ b/view_envs.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym, roboverse\n",
     "import pybullet as p\n",
-    "import re"
+    "import re\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,35 +26,426 @@
     "        print(env_id)\n",
     "        env = roboverse.make(env_id, gui=True)\n",
     "        env.reset()\n",
-    "        for _ in range(100):\n",
-    "            env.step(env.action_space.sample())\n",
+    "        # for _ in range(50):\n",
+    "        #     env.step([0.1, 0, 0, 0, 0, 0, 0])\n",
+    "        # time.sleep(2)\n",
+    "        for _ in range(200):\n",
+    "            env.step([0, 0, 0.6, 0, 0, 0, 0])\n",
+    "        time.sleep(2)\n",
+    "        for _ in range(200):\n",
+    "            env.step([0, 0, 0, 0, 0, .6, 0])\n",
+    "        time.sleep(2)\n",
     "        p.disconnect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 47 matching environments.\n",
-      "Widow250GraspLocconic_cup-v0\n",
-      "Widow250GraspLocfountain_vase-v0\n",
-      "Widow250GraspLoccircular_table-v0\n",
-      "Widow250GraspLochex_deep_bowl-v0\n",
-      "Widow250GraspLocsmushed_dumbbell-v0\n",
-      "Widow250GraspLocsquare_prism_bin-v0\n",
-      "Widow250GraspLocnarrow_tray-v0\n",
-      "Widow250GraspLoccolunnade_top-v0\n",
-      "Widow250GraspLocstalagcite_chunk-v0\n"
+      "Found 1 matching environments.\n",
+      "Widow250GraspEasyRandomTrain-v0\n",
+      "[8.99543738e+01 2.70794795e-10 1.79954374e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.02258647e+01 1.33574885e-04 1.79954337e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.02032256e+01 3.97262359e-04 1.79954252e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01877032e+01 8.55150375e-04 1.79954090e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01721708e+01 1.41693033e-03 1.79953882e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01559787e+01 1.87558725e-03 1.79953704e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01399692e+01 2.25252005e-03 1.79953553e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01243371e+01 2.66300322e-03 1.79953386e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.01087318e+01 3.07529392e-03 1.79953217e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00929686e+01 3.50735444e-03 1.79953037e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00767351e+01 3.95522981e-03 1.79952851e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00606457e+01 4.41362257e-03 1.79952659e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00454754e+01 4.87873234e-03 1.79952464e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00303850e+01 5.35481901e-03 1.79952264e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00152787e+01 5.83828146e-03 1.79952060e+02]\n",
+      "[0. 0. 0.]\n",
+      "[9.00006497e+01 6.32257116e-03 1.79951856e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99865148e+01 6.81133084e-03 1.79951650e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99734714e+01 7.31059482e-03 1.79951440e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99607378e+01 7.80738279e-03 1.79951230e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99482482e+01 8.30661467e-03 1.79951019e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99359978e+01 8.80815734e-03 1.79950807e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99239807e+01 9.31202301e-03 1.79950593e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99121913e+01 9.81822123e-03 1.79950379e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.99006239e+01 1.03267615e-02 1.79950163e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98892733e+01 1.08376533e-02 1.79949946e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98781340e+01 1.13509059e-02 1.79949728e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98672010e+01 1.18665288e-02 1.79949508e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98564692e+01 1.23845310e-02 1.79949287e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98459338e+01 1.29049219e-02 1.79949066e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98355899e+01 1.34277106e-02 1.79948843e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98254330e+01 1.39529061e-02 1.79948618e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98154584e+01 1.44805175e-02 1.79948393e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.98056618e+01 1.50105536e-02 1.79948166e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97960388e+01 1.55430234e-02 1.79947938e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97865852e+01 1.60779355e-02 1.79947709e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97772970e+01 1.66152988e-02 1.79947479e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97681700e+01 1.71551218e-02 1.79947248e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97592005e+01 1.76974132e-02 1.79947015e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97503845e+01 1.82421815e-02 1.79946781e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97417185e+01 1.87894351e-02 1.79946546e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97331986e+01 1.93391823e-02 1.79946310e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97248215e+01 1.98914316e-02 1.79946073e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97165837e+01 2.04461910e-02 1.79945835e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97084817e+01 2.10034688e-02 1.79945595e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.97005124e+01 2.15632730e-02 1.79945354e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96926725e+01 2.21256117e-02 1.79945112e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96849589e+01 2.26904929e-02 1.79944869e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96773686e+01 2.32579243e-02 1.79944625e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96698985e+01 2.38279140e-02 1.79944379e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96625458e+01 2.44004694e-02 1.79944132e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96553077e+01 2.49755985e-02 1.79943885e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96481814e+01 2.55533087e-02 1.79943635e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96411643e+01 2.61336074e-02 1.79943385e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96342536e+01 2.67165025e-02 1.79943134e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96274468e+01 2.73020011e-02 1.79942881e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96207415e+01 2.78901106e-02 1.79942628e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96141352e+01 2.84808382e-02 1.79942373e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96076255e+01 2.90741912e-02 1.79942117e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.96012102e+01 2.96701769e-02 1.79941860e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95948869e+01 3.02688021e-02 1.79941601e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95886534e+01 3.08700738e-02 1.79941342e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95825076e+01 3.14739991e-02 1.79941081e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95764475e+01 3.20805849e-02 1.79940819e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95704709e+01 3.26898378e-02 1.79940556e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95645759e+01 3.33017649e-02 1.79940292e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95587604e+01 3.39163728e-02 1.79940026e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95530227e+01 3.45336680e-02 1.79939760e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95473609e+01 3.51536570e-02 1.79939492e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95417731e+01 3.57763464e-02 1.79939223e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95362576e+01 3.64017427e-02 1.79938953e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95308127e+01 3.70298522e-02 1.79938682e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95254367e+01 3.76606810e-02 1.79938410e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95201279e+01 3.82942359e-02 1.79938136e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95148848e+01 3.89305229e-02 1.79937861e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95097058e+01 3.95695480e-02 1.79937585e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.95045894e+01 4.02113175e-02 1.79937308e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94995341e+01 4.08558374e-02 1.79937030e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94945385e+01 4.15031136e-02 1.79936751e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94896012e+01 4.21531520e-02 1.79936470e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94847207e+01 4.28059587e-02 1.79936188e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94798958e+01 4.34615393e-02 1.79935905e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94751251e+01 4.41198994e-02 1.79935621e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94704073e+01 4.47810446e-02 1.79935336e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94657413e+01 4.54449813e-02 1.79935050e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94611258e+01 4.61117142e-02 1.79934762e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94565596e+01 4.67812498e-02 1.79934473e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94520416e+01 4.74535927e-02 1.79934183e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94475707e+01 4.81287488e-02 1.79933892e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94431456e+01 4.88067233e-02 1.79933600e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94387655e+01 4.94875215e-02 1.79933306e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94344292e+01 5.01711487e-02 1.79933011e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94301357e+01 5.08576106e-02 1.79932716e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94258840e+01 5.15469116e-02 1.79932419e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94216732e+01 5.22390576e-02 1.79932120e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94175023e+01 5.29340528e-02 1.79931821e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94133704e+01 5.36319034e-02 1.79931520e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94092766e+01 5.43326134e-02 1.79931219e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94052200e+01 5.50361883e-02 1.79930916e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.94011998e+01 5.57426324e-02 1.79930611e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93972151e+01 5.64519507e-02 1.79930306e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93932652e+01 5.71641480e-02 1.79930000e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93893492e+01 5.78792295e-02 1.79929692e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93854663e+01 5.85971998e-02 1.79929383e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93816159e+01 5.93180629e-02 1.79929073e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93777971e+01 6.00418242e-02 1.79928762e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93740094e+01 6.07684873e-02 1.79928449e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93702518e+01 6.14980578e-02 1.79928136e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93665239e+01 6.22305394e-02 1.79927821e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93628249e+01 6.29659371e-02 1.79927505e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93591542e+01 6.37042551e-02 1.79927188e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93555112e+01 6.44454972e-02 1.79926870e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93518952e+01 6.51896681e-02 1.79926550e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93483056e+01 6.59367717e-02 1.79926229e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93447420e+01 6.66868118e-02 1.79925907e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93412036e+01 6.74397941e-02 1.79925584e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93376900e+01 6.81957217e-02 1.79925260e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93342005e+01 6.89545996e-02 1.79924934e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93307348e+01 6.97164300e-02 1.79924608e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93272922e+01 7.04812188e-02 1.79924280e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93238723e+01 7.12489683e-02 1.79923951e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93204746e+01 7.20196833e-02 1.79923620e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93170987e+01 7.27933677e-02 1.79923289e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93137439e+01 7.35700252e-02 1.79922956e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93104100e+01 7.43496594e-02 1.79922622e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93070965e+01 7.51322745e-02 1.79922287e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93038029e+01 7.59178737e-02 1.79921951e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.93005288e+01 7.67064610e-02 1.79921614e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92972739e+01 7.74980392e-02 1.79921275e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92940377e+01 7.82926132e-02 1.79920935e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92908198e+01 7.90901857e-02 1.79920594e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92876199e+01 7.98907605e-02 1.79920252e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92844377e+01 8.06943404e-02 1.79919908e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92812726e+01 8.15009294e-02 1.79919563e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92781246e+01 8.23105307e-02 1.79919218e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92749930e+01 8.31231479e-02 1.79918871e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92718778e+01 8.39387840e-02 1.79918522e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92687785e+01 8.47574422e-02 1.79918173e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92656948e+01 8.55791262e-02 1.79917822e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92626264e+01 8.64038385e-02 1.79917470e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92595731e+01 8.72315832e-02 1.79917117e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92565345e+01 8.80623631e-02 1.79916763e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92535104e+01 8.88961809e-02 1.79916407e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92505005e+01 8.97330395e-02 1.79916050e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92475046e+01 9.05729417e-02 1.79915692e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92445223e+01 9.14158918e-02 1.79915333e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92415535e+01 9.22618918e-02 1.79914973e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92382111e+01 9.29437088e-02 1.79914680e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92345137e+01 9.34724141e-02 1.79914449e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92307509e+01 9.39699404e-02 1.79914230e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92269985e+01 9.44700487e-02 1.79914010e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92232547e+01 9.49721270e-02 1.79913789e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92195194e+01 9.54761900e-02 1.79913567e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92157923e+01 9.59822412e-02 1.79913345e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92120732e+01 9.64902837e-02 1.79913122e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92083619e+01 9.70003206e-02 1.79912897e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92046581e+01 9.75123554e-02 1.79912673e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.92009617e+01 9.80263915e-02 1.79912447e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91971897e+01 9.85093461e-02 1.79912234e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91934262e+01 9.89950395e-02 1.79912019e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91896692e+01 9.94826230e-02 1.79911804e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91859183e+01 9.99721144e-02 1.79911589e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91821736e+01 1.00463516e-01 1.79911372e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91784347e+01 1.00956831e-01 1.79911155e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91747015e+01 1.01452063e-01 1.79910936e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91709739e+01 1.01949214e-01 1.79910717e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91672517e+01 1.02448288e-01 1.79910498e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91635347e+01 1.02949287e-01 1.79910277e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91598227e+01 1.03452214e-01 1.79910056e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91561157e+01 1.03957072e-01 1.79909834e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91524135e+01 1.04463864e-01 1.79909611e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91487159e+01 1.04972592e-01 1.79909387e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91450228e+01 1.05483260e-01 1.79909162e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91413340e+01 1.05995870e-01 1.79908937e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91376495e+01 1.06510425e-01 1.79908711e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91339691e+01 1.07026928e-01 1.79908484e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91302927e+01 1.07545381e-01 1.79908256e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91266201e+01 1.08065787e-01 1.79908028e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91229513e+01 1.08588150e-01 1.79907798e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91192862e+01 1.09112471e-01 1.79907568e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91156245e+01 1.09638753e-01 1.79907337e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91119663e+01 1.10166999e-01 1.79907106e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91083114e+01 1.10697211e-01 1.79906873e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91046596e+01 1.11229394e-01 1.79906640e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.91010111e+01 1.11763547e-01 1.79906406e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90973655e+01 1.12299676e-01 1.79906171e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90937229e+01 1.12837781e-01 1.79905935e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90900831e+01 1.13377866e-01 1.79905698e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90864461e+01 1.13919933e-01 1.79905461e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90828117e+01 1.14463985e-01 1.79905223e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90791799e+01 1.15010024e-01 1.79904984e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90755507e+01 1.15558053e-01 1.79904744e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90719239e+01 1.16108074e-01 1.79904504e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90682994e+01 1.16660090e-01 1.79904262e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90646772e+01 1.17214103e-01 1.79904020e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90610573e+01 1.17770116e-01 1.79903777e+02]\n",
+      "[0. 0. 0.]\n",
+      "[8.90574395e+01 1.18328131e-01 1.79903533e+02]\n",
+      "[0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
-    "render_envs('Widow250GraspLoc*')"
+    "render_envs('Widow250GraspEasyRandomTrain')"
    ]
   }
  ],
@@ -76,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4
  },
