Add custom grasp policy

--- a/notebooks/orientation_analysis.ipynb
+++ b/notebooks/orientation_analysis.ipynb
@@ -4,12 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: May 31 2022 06:54:08\n"
+     ]
+    }
+   ],
    "source": [
     "from roboverse.assets.shapenet_object_lists import GRASP_TRAIN_OBJECTS, GRASP_TEST_OBJECTS, OBJECT_ORIENTATION_INDS\n",
     "from collections import defaultdict\n",
     "import glob\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import roboverse.bullet as p\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -263,6 +273,39 @@
     "for obj_name in GRASP_TRAIN_OBJECTS + GRASP_TEST_OBJECTS:\n",
     "    orient_ind = OBJECT_ORIENTATION_INDS[obj_name]\n",
     "    print(obj_name, rotate_grasp_success[obj_name][orient_ind], grasp_success[obj_name][orient_ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'conic_cup': -80, 'fountain_vase': 30, 'circular_table': 32, 'hex_deep_bowl': 47, 'smushed_dumbbell': 12, 'square_prism_bin': 15, 'narrow_tray': 7, 'colunnade_top': -11, 'stalagcite_chunk': -45, 'bongo_drum_bowl': 70, 'pacifier_vase': -23, 'beehive_funnel': -53, 'crooked_lid_trash_can': 42, 'toilet_bowl': -41, 'pepsi_bottle': 4, 'tongue_chair': -33, 'modern_canoe': -10, 'pear_ringed_vase': -53, 'short_handle_cup': 24, 'bullet_vase': -54, 'glass_half_gallon': -168, 'flat_bottom_sack_vase': -45, 'trapezoidal_bin': -47, 'vintage_canoe': 46, 'bathtub': 40, 'flowery_half_donut': -45, 't_cup': -1, 'cookie_circular_lidless_tin': 14, 'box_sofa': 1, 'two_layered_lampshade': 6, 'conic_bin': -34, 'jar': 48, 'bunsen_burner': 14, 'long_vase': 58, 'ringed_cup_oversized_base': 13, 'aero_cylinder': 63, 'square_rod_embellishment': 2, 'grill_trash_can': -11, 'shed': 27, 'sack_vase': -20, 'two_handled_vase': 40, 'thick_wood_chair': -16, 'curved_handle_cup': 55, 'baseball_cap': 80, 'elliptical_capsule': 45}\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_yaws = {}\n",
+    "for obj_name in GRASP_TRAIN_OBJECTS + GRASP_TEST_OBJECTS:\n",
+    "    orient_ind = OBJECT_ORIENTATION_INDS[obj_name]\n",
+    "    dataset_path = glob.glob(f'/nfs/kun2/users/chet/robo_exp/orient_trajs/{obj_name}_orient_{orient_ind}_rotate_grasp/*.npy')[0]\n",
+    "    dataset = np.load(dataset_path, allow_pickle=True)\n",
+    "    yaws = []\n",
+    "    for traj in dataset:\n",
+    "        if traj['rewards'][-1] == 0:\n",
+    "            continue\n",
+    "        for obs in traj['observations'][20:]:\n",
+    "            quat = obs['state'][3:7]\n",
+    "            yaws.append(p.quat_to_deg(quat)[-1])\n",
+    "    obj_yaws[obj_name] = round(np.mean(yaws))\n",
+    "print(repr(obj_yaws))"
    ]
   }
  ],
